<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="Axis_2" Id="{cc52a494-82bc-4d82-99c3-9bfba67cd4d8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Axis_2
VAR
	bLimitPowerAxis2 AT %Q*: BOOL := TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Initial parameters of an Axis
IF _TaskInfo[fbGetCurTaskIndex.index].FirstCycle THEN
    //Initial default values:
    GVL.astAxes[2].stConfig.eHomeSeq := 1;
    GVL.astAxes[2].stConfig.fHomePosition := 0.0;
    GVL.astAxes[2].stConfig.fHomeFinishDistance := -1;
END_IF

//Define ACTIONS() or write exclusive code for an specific axis.
//Eg. Stop when temperature reaches certain values, reduce speed if  a signal is activated, etc.
gvl.astAxes[2].stInputs.bLimitBwd := TRUE;
gvl.astAxes[2].stInputs.bLimitFwd := TRUE;]]></ST>
    </Implementation>
    <LineIds Name="Axis_2">
      <LineId Id="20" Count="0" />
      <LineId Id="29" Count="9" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>