<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="Axis_3" Id="{1bec8e22-b127-4216-8a57-916e22c1b930}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Axis_3
VAR
	bLimitPowerAxis3 AT %Q*: BOOL := TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Initial parameters of an Axis
IF _TaskInfo[fbGetCurTaskIndex.index].FirstCycle THEN
    //Initial default values:
    GVL.astAxes[3].stConfig.eHomeSeq := 1;
    GVL.astAxes[3].stConfig.fHomePosition := 0.0;
    GVL.astAxes[3].stConfig.fHomeFinishDistance := -1;
END_IF

//Define ACTIONS() or write exclusive code for an specific axis.
//Eg. Stop when temperature reaches certain values, reduce speed if  a signal is activated, etc.
gvl.astAxes[3].stInputs.bLimitBwd := TRUE;
gvl.astAxes[3].stInputs.bLimitFwd := TRUE;]]></ST>
    </Implementation>
    <LineIds Name="Axis_3">
      <LineId Id="20" Count="0" />
      <LineId Id="29" Count="9" />
      <LineId Id="23" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>